--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,19 @@
-# IMA Lab 
-
-# Core
-pandas>=2.0.0
-numpy>=1.24.0
-
-# Data Loading
-openpyxl>=3.1.0
-gspread>=5.11.0
-google-auth>=2.23.0
-google-auth-oauthlib>=1.1.0
-
-# Database
-# sqlite3 is built-in
-
-# Visualization
-plotly>=5.17.0
-streamlit>=1.28.0
-
-# Utils
-toml>=0.10.2
+pandas
+cython==0.29.16
+numpy
+torch
+torchvision
+cython
+pycocotools
+tabulate
+alfred-py
+opencv-python
+termcolor
+cloudpickle
+imagesize
+portalocker
+easydict
+matplotlib
+tensorboard==1.14
+tqdm
+pyzmq
